--- a/PolymerStart/index.html
+++ b/PolymerStart/index.html
@@ -16,19 +16,14 @@
 
 </head>
 <body fullbleed unresolved>
-
     <jumbotron-test header-text="Hello, world!" is-rude-header="true" number-of-times="3"></jumbotron-test>
-
-    <div class="container">
-        <name-stuff label-class="label-info" placeholder-text="Enter text for the blood god"></name-stuff>
-    </div>
-
     <hr>
-
+    <div class="container">
+        <name-stuff id="element" label-class="label-info" placeholder-text="Enter text for the blood god"></name-stuff>
+    </div>
     <footer>
         <p>© Company 2015</p>
     </footer>
-  
 </body>
 
 
