made the componenets interacte

--- a/PolymerStart/index.html
+++ b/PolymerStart/index.html
@@ -16,11 +16,13 @@
 
 </head>
 <body fullbleed unresolved>
-    <jumbotron-test header-text="Hello, world!" is-rude-header="true" number-of-times="3"></jumbotron-test>
+    <jumbotron-test id="jumbo" header-text="Hello, world!" is-rude-header="true" number-of-times="3"></jumbotron-test>
     <hr>
     <div class="container">
         <name-stuff id="element" label-class="label-info" placeholder-text="Enter text for the blood god"></name-stuff>
     </div>
+   
+
     <footer>
         <p>© Company 2015</p>
     </footer>
