--- a/PolymerStart/index.html
+++ b/PolymerStart/index.html
@@ -9,7 +9,9 @@
     <!--Import -->
     <link href="../components/name-stuff.html" rel="import">
     <link href="../components/jumbotron.html" rel="import">
-
+    <link href="../components/workers.html" rel="import">
+   <link href="../components/employeeItem.html" rel="import">
+    
     <!--JS -->
     <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
     <script src="JS/index.js"></script>
@@ -20,8 +22,10 @@
     <hr>
     <div class="container">
         <name-stuff id="element" label-class="label-info" placeholder-text="Enter text for the blood god"></name-stuff>
+        <br/>
+        <employee-list></employee-list>
+       
     </div>
-   
 
     <footer>
         <p>© Company 2015</p>
